--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "howler": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-howler": "^5.0.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
